Fix slider too large on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ svg:last-child {
 }
 
 #slider {
-  width: 500px;
+  max-width: 500px;
   margin: 0 auto;
 }
 
